<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_mainmenu"
    >


<!--    kocurmeler-->
    <fragment
        android:id="@+id/navigation_phone"
        android:name="com.aris.paytraffic.fragments.phone.PhoneFragment"
        android:label="@string/phone"
        tools:layout="@layout/phone_fragment" />
<!--bonuslar-->
    <fragment
        android:id="@+id/navigation_notfication"
        android:name="com.aris.paytraffic.fragments.notfication.NotficationFragment"
        android:label="@string/notfications"
        tools:layout="@layout/notfication_fragment" />

    <fragment
        android:id="@+id/navigation_mainmenu"
        android:name="com.aris.paytraffic.fragments.mainMenu.MainMenuFragment"
        android:label="@string/mainmenu"
        tools:layout="@layout/main_menu_fragment" />

    <fragment
        android:id="@+id/navigation_payments"
        android:name="com.aris.paytraffic.fragments.payments.PaymentsFragment"
        android:label="@string/payments"
        tools:layout="@layout/payments_fragment" />

    <fragment
        android:id="@+id/navigation_bounces"
        android:name="com.aris.paytraffic.fragments.bounces.BounceFragment"
        android:label="@string/bonuslar"
        tools:layout="@layout/bounce_fragment" />



</navigation>